--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Puzzles and Cookies</title>
         <link rel="stylesheet" href="../main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="puzzle-header">
@@ -19,15 +19,21 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1>Lets Puzzle! </h1>
-                <h3>& eat cookies!</h3>
+                <h1>
+                    Lets Puzzle!
+                </h1>
+                <h3>
+                    & eat cookies!
+                </h3>
             </div>
 
         </header>
         <main>
             <section id="puzzles">
                     <div class="full-width">
-                        <h2>When All The Pieces Fit</h2>
+                        <h2>
+                            When All The Pieces Fit
+                        </h2>
                         <p>
                             There is no greater pleasure than putting together a 1000 piece puzzle! The time I spend putting together a 
                             magical landscape, mythical creature or colorful scenery can be ✨<i>therapeutic</i>✨. 
@@ -41,7 +47,9 @@
             </section>
             <section id="cookies">
                 <div class="full-width">
-                    <h2>Warm Cookies and Ice Cold Milk</h2>
+                    <h2>
+                        Warm Cookies and Ice Cold Milk
+                    </h2>
                     <p>
                         Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate 
                         calls my name. Is there any better pairing than
@@ -52,9 +60,10 @@
                 </div>   
             </section>
           <footer>
-            <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
+            <h3>
+                Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023
+            </h3>
           </footer>  
         </main>
-
     </body>
 </html>
