--- a/work/index.html
+++ b/work/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Work it girl!</title>
         <link rel="stylesheet" href="../main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -21,52 +21,64 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1><span class="font">Pinterest</span> and Isa</h1>
+                <h1>
+                    <span class="font">Pinterest</span> and Isa
+                </h1>
             </div>
 
         </header>
         <main>
             <section id="hr">
                 <div class="full-width">
-                    <h2>Finding My Calling</h2>
-                    <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
+                    <h2>
+                        Finding My Calling
+                    </h2>
+                    <p>
+                        As I navigated life after Stanford, <i>Go Cardinals!</i>, my career took me to unexpected places. 
                         I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                         managed my dad's business, and soon started to dabble in the world of human resources.
                     </p>
                     <p>
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet. The role of 
                         Client Success Consultant seemed like a good place to rest and find myself while I looked for a career path better 
-                        suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? As I stepped deeper into my role of 
-                        Client Success Consultant, I realized I really enjoyed informing people, reading up on the latest policy changes at work, and just
-                        helping others understand rules and regulations at work. 
+                        suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? 
+                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed informing people, 
+                        reading up on the latest policy changes at work, and just helping others understand rules and regulations at work. 
+                        
                     </p>
                 </div>
             </section>
             <section id="pos">
                 <div class="full-width">
-                    <h2>People Operations Specialist</h2>
+                    <h2>
+                        People Operations Specialist
+                    </h2>
                     <p>
-                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> Umm, wasn't HR supposed to be a 
-                        <span>temporary career path</span>?! 
+                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> 
+                        Umm, wasn't HR supposed to be a <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... 
-                        followed by perfectly crafted emails, smooth onboarding for new employees and a few friendly calls with my fellow 
-                        <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and check-in with my co-workers. With Pinflex,
-                        most of us work from home and venture into the office here and there. This only makes it more important to check-in with 
-                        each other, our mental health is top priority!
+                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top 
+                        priority (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... followed by perfectly crafted emails, 
+                        smooth onboarding for new employees and a few friendly calls with my fellow 
+                        <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and 
+                        check-in with my co-workers. With Pinflex, most of us work from home and venture into the office here 
+                        and there. This only makes it more important to check-in with each other, our mental health is top priority!
                     </p>
                     <p>
-                        As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am cultivating strong 
-                        relationships with other <span class="pinterest-font">Pinployees</span> so that I create a safe space for those that are current and new employees. 
+                        As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am 
+                        cultivating strong relationships with other <span class="pinterest-font">Pinployees</span> 
+                        so that I create a safe space for those that are current and new employees. 
                         Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
                         those that are seeking assistance. 
-                        </p>
+                    </p>
                 </div>
             </section>
             <section id="contact">
                 <div class="full-width">
-                    <h2>Let's Connect!</h2>
+                    <h2>
+                        Let's Connect!
+                    </h2>
                     <p>
                         Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
                     </p>
@@ -74,12 +86,16 @@
                         I look forward to connecting and learning about you! 
                     </p>
                     <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
-                    <p><span class="adorable">Umm, don't I look adorable!</span></p>                        
+                    <p>
+                        <span class="adorable">Umm, don't I look adorable!</span>
+                    </p>                        
                 </div>
             </section>
             <footer>
                 <div class="full-width">
-                    <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span> 2023</h3>
+                    <h3>
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span>2023
+                    </h3>
                 </div>
             </footer>  
         </main>
