--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>All about Isa!</title>
         <link rel="stylesheet" href="../main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="about">
@@ -19,7 +19,9 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1>About Isaura</h1>
+                <h1>
+                    About Isaura
+                </h1>
             </div>
         </header>
         <main>
@@ -37,7 +39,9 @@
                         Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet!
                         I'd help my parents sell, display merchandise, and clean up. 
                     </p>
-                    <p> <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/></p>
+                    <p>
+                        <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/>
+                    </p>
                     <p>    
                         Waking up before the sun rises was often difficult as a kid, but now I see 
                         the hard work and effort that my parents did for my siblings and I. Without that experience, 
@@ -53,15 +57,21 @@
             </section>
             <section id="stanford">
                 <div class="full-width">
-                    <h2>Stanford</h2>
-                    <h3>Class of 2010 🎓</h3>
+                    <h2>
+                        Stanford
+                    </h2>
+                    <h3>
+                        Class of 2010 🎓
+                    </h3>
                     <p>
                         I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
                         I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at El Centro Chicano for most of
                         my years at Stanford. in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
                         entering students feel at home. After all, there is no better feeling than being in your <i>casita!</i>
                     </p>
-                    <h3>Chocolate Croissants and Crumbling Empires</h3>
+                    <h3>
+                        Chocolate Croissants and Crumbling Empires
+                    </h3>
                     <p>
                         I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
                         experience life outside of my comfort zone. My thirst for new experiences took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
@@ -83,7 +93,9 @@
             </section>
             <section id="life-pinterest">
                 <div class="full-width">
-                    <h2>Life at Pinterest</h2>
+                    <h2>
+                        Life at Pinterest
+                    </h2>
                     <p>
                         Flashforward to today and now I am a proud Pinployee 📌! I stepped into a few roles but ultimately, human resources was my calling.
                         Pinterest has been an amazing place where I have been able to express myself and grow as a People Operations Specialist. 
@@ -95,7 +107,9 @@
             </section>
             <footer>
                 <div class="full-width">
-                    <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
+                    <h3>
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023
+                    </h3>
                 </div>
             </footer>  
         </main>
