--- a/work/index.html
+++ b/work/index.html
@@ -5,9 +5,8 @@
         <meta charset="UTF-8">
         <title>Work it girl!</title>
         <link rel="stylesheet" href="../main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
-
     <body>
         <header>
             <div class="full-width">
@@ -32,7 +31,8 @@
                     <h2>
                         Finding My Calling
                     </h2>
-                    <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career took me to unexpected places. 
+                    <p>
+                        As I navigated life after Stanford, <i>Go Cardinals!</i>, my career took me to unexpected places. 
                         I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                         managed my dad's business, and soon started to dabble in the world of human resources.
                     </p>
@@ -51,22 +51,22 @@
                         People Operations Specialist
                     </h2>
                     <p>
-                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> Umm, 
+                        Ten years later, I am a proud member of the HR team at <span>Pinterest!</span> Umm, 
                         wasn't HR supposed to be a <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority 
-                        (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... 
-                        followed by perfectly crafted emails, smooth onboarding for new employees and a few friendly calls with my fellow 
-                        <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and check-in with my co-workers. With Pinflex,
-                        most of us work from home and venture into the office here and there. This only makes it more important to check-in with 
-                        each other, our mental health is top priority!
+                        My day to day at <span>Pinterest</span> requires a few things. Coffee being my top priority 
+                        (thanks <span>PinCafe!</span>)... followed by perfectly crafted emails, smooth onboarding 
+                        for new employees and a few friendly calls with my fellow <span>Pinployees!</span> 
+                        As busy as the day gets, I make sure to carve time out and check-in with my co-workers. 
+                        With Pinflex, most of us work from home and venture into the office here and there. 
+                        This only makes it more important to check-in with each other, our mental health is top priority!
                     </p>
                     <p>
-                        As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am cultivating strong 
-                        relationships with other <span class="pinterest-font">Pinployees</span> so that I create a safe space for those that are current and new employees. 
-                        Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
-                        those that are seeking assistance. 
+                        As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am 
+                        cultivating strong relationships with other <span>Pinployees</span> so that I create a safe 
+                        space for those that are current and new employees. Human resources can be a complicated field, 
+                        I strive to make it a little easier to understand and friendlier for those that are seeking assistance. 
                     </p>
                 </div>
             </section>
@@ -81,7 +81,7 @@
                     <p>
                         I look forward to connecting and learning about you! 
                     </p>
-                    <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
+                        <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
                     <p>
                         <span class="adorable">Umm, don't I look adorable!</span>
                     </p>                        
@@ -90,7 +90,7 @@
             <footer>
                 <div class="full-width">
                     <h3>
-                        Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span> 2023
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span>2023
                     </h3>
                 </div>
             </footer>  
