--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>All about Isa!</title>
         <link rel="stylesheet" href="../main.css">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="about">
@@ -19,7 +19,9 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1>About Isaura</h1>
+                <h1>
+                    About Isaura
+                </h1>
             </div>
         </header>
         <main>
@@ -37,7 +39,9 @@
                         Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet!
                         I'd help my parents sell, display merchandise, and clean up. 
                     </p>
-                    <p> <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/></p>
+                    <p>
+                        <img src="../img/isa-swapmeet.png" alt="Isa and parents"/>
+                    </p>
                     <p>    
                         Waking up before the sun rises was often difficult as a kid, but now I see 
                         the hard work and effort that my parents did for my siblings and I. Without that experience, 
@@ -64,8 +68,8 @@
                         quite the experience. I lived in Casa Zapata, met other first generation students, and embraced my 
                         new academic future. I worked at El Centro Chicano for most of my years at Stanford. 
                         In that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, 
-                        and helped entering students feel at home. After all, there is no better feeling
-                         than being in your <i>casita!</i>
+                        and helped entering students feel at home. After all, there is no better feeling than being 
+                        in your <i>casita!</i>
                     </p>
                     <h3>
                         Chocolate Croissants and Crumbling Empires
@@ -96,10 +100,11 @@
                         Life at Pinterest
                     </h2>
                     <p>
-                        Flashforward to today and now I am a proud Pinployee📌! Pinterest has been an amazing place where I have been able to express 
-                        myself and grow as a People Operations Specialist. 
+                        Flashforward to today and now I am a proud Pinployee📌! Pinterest has been an amazing place where I have been 
+                        able to express myself and grow as a People Operations Specialist. 
                     </p>
-                    <p>I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world of 
+                    <p>
+                        I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world of 
                         human resources is my calling. Is there any greater feeling than sending out a well worded email?
                     </p>
                 </div>
