--- a/work/index.html
+++ b/work/index.html
@@ -40,8 +40,8 @@
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet. The role of 
                         Client Success Consultant seemed like a good place to rest and find myself while I looked for a career path better 
                         suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? 
-                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed informing people, 
-                        reading up on the latest policy changes at work, and just helping others understand rules and regulations at work.         
+                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed reading up on the latest 
+                        policy changes at work, and helping others understand those changes.         
                     </p>
                 </div>
             </section>
