--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
                         I'd help my parents sell, display merchandise, and clean up. 
                     </p>
                     <p>
-                        <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/>
+                        <img src="../img/isa-swapmeet.png" alt="Isa and parents"/>
                     </p>
                     <p>    
                         Waking up before the sun rises was often difficult as a kid, but now I see 
@@ -49,9 +49,9 @@
                     </p>
                     <p>   
                         My weekdays would be full of essays, presentations, math tests, book reports, art projects,
-                        and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, I joined the 
-                        art club, spent long hours at the library and made sure everything was in place. All of my hard work ensured that I graduated 
-                        validictorian in highschool and got my spot at Stanford! 
+                        and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, 
+                        I joined the art club, spent long hours at the library and made sure everything was in place. 
+                        All of my hard work ensured that I graduated validictorian in highschool and got my spot at Stanford!
                     </p>
                 </div>
             </section>
@@ -64,26 +64,28 @@
                         Class of 2010 🎓
                     </h3>
                     <p>
-                        I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
-                        I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at El Centro Chicano for most of
-                        my years at Stanford. in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
+                        I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was 
+                        quite the experience. I lived in Casa Zapata, met other first generation students, and embraced my new 
+                        academic future. I worked at El Centro Chicano for most of my years at Stanford. in that time, I helped set  
+                        up the Zoot Suit play production, provided other weekly activites to students, and helped
                         entering students feel at home. After all, there is no better feeling than being in your <i>casita!</i>
                     </p>
                     <h3>
                         Chocolate Croissants and Crumbling Empires
                     </h3>
                     <p>
-                        I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
-                        experience life outside of my comfort zone. My thirst for new experiences took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
-                        the lifestyles I experienced where all incredible. 
+                        I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any 
+                        chance to travel and experience life outside of my comfort zone. My thirst for new experiences took me 
+                        to Chile, Rome, Croatia and Germany! The culture, the politics, the lifestyles I experienced where all incredible.
                     </p>
                     <p> 
-                        Never did i think I'd be able to sit at the plaza
-                        de San Pedro in Chile, or visit the Colosseum in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
+                        Never did i think I'd be able to sit at the plaza de San Pedro in Chile, or visit the Colosseum in Rome, 
+                        see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
                     </p>
                     <p>
-                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was charming. The bratwurst in Germany was different
-                        yet delicious. The gelatto in Rome was so refreshing. BUT the <i>chocolate croissants</i> I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
+                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was charming. The bratwurst in 
+                        Germany was different yet delicious. The gelatto in Rome was so refreshing. BUT the <i>chocolate croissants</i> 
+                        I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
                         nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
                     </p>
                     <p>
@@ -97,11 +99,14 @@
                         Life at Pinterest
                     </h2>
                     <p>
-                        Flashforward to today and now I am a proud Pinployee 📌! I stepped into a few roles but ultimately, human resources was my calling.
-                        Pinterest has been an amazing place where I have been able to express myself and grow as a People Operations Specialist. 
+                        Flashforward to today and now I am a proud Pinployee 📌! I stepped into a few roles but ultimately, 
+                        human resources was my calling. Pinterest has been an amazing place where I have 
+                        been able to express myself and grow as a People Operations Specialist. 
                     </p>
-                    <p>I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world of human resources is my calling.
-                        Is there any greater feeling than sending out a well worded email?
+                    <p>
+                        I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world 
+                        of human resources is my calling. Is there any greater feeling than 
+                        sending out a well worded email?
                     </p>
                 </div>
             </section>
