--- a/work/index.html
+++ b/work/index.html
@@ -42,9 +42,8 @@
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet. The role of 
                         Client Success Consultant seemed like a good place to rest and find myself while I looked for a career path better 
                         suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? 
-                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed informing people, 
-                        reading up on the latest policy changes at work, and just helping others understand rules and regulations at work. 
-                        
+                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed reading up on the latest 
+                        policy changes at work, and helping others understand those changes. 
                     </p>
                 </div>
             </section>
@@ -54,20 +53,20 @@
                         People Operations Specialist
                     </h2>
                     <p>
-                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> 
+                        Ten years later, I am a proud member of the HR team at <span>Pinterest!</span> 
                         Umm, wasn't HR supposed to be a <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top 
-                        priority (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... followed by perfectly crafted emails, 
+                        My day to day at <span>Pinterest</span> requires a few things. Coffee being my top 
+                        priority (thanks <span>PinCafe!</span>)... followed by perfectly crafted emails, 
                         smooth onboarding for new employees and a few friendly calls with my fellow 
-                        <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and 
+                        <span>Pinployees!</span> As busy as the day gets, I make sure to carve time out and 
                         check-in with my co-workers. With Pinflex, most of us work from home and venture into the office here 
                         and there. This only makes it more important to check-in with each other, our mental health is top priority!
                     </p>
                     <p>
                         As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am 
-                        cultivating strong relationships with other <span class="pinterest-font">Pinployees</span> 
+                        cultivating strong relationships with other <span>Pinployees</span> 
                         so that I create a safe space for those that are current and new employees. 
                         Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
                         those that are seeking assistance. 
