--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -59,11 +59,13 @@
                     </p>    
                 </div>   
             </section>
-          <footer>
-            <h3>
-                Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023
-            </h3>
-          </footer>  
+            <footer>
+                <h3>
+                    <div class="full-width"
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023
+                    </div>
+                </h3>
+            </footer>  
         </main>
     </body>
 </html>
