--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -60,11 +60,11 @@
                 </div>   
             </section>
             <footer>
-                <h3>
-                    <div class="full-width"
-                        Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023
-                    </div>
-                </h3>
+                <div class="full-width">
+                    <h3>
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span> 2023
+                    </h3>
+                </div>
             </footer>  
         </main>
     </body>
