--- a/work/index.html
+++ b/work/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="../main.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
-
     <body>
         <header>
             <div class="full-width">
@@ -25,7 +24,6 @@
                     <span class="font">Pinterest</span> and Isa
                 </h1>
             </div>
-
         </header>
         <main>
             <section id="hr">
@@ -40,10 +38,10 @@
                     </p>
                     <p>
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet. The role of 
-                        Client Success Consultant seemed like a good place to rest and find myself while I looked for a career path better 
-                        suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? 
-                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed reading up on the latest 
-                        policy changes at work, and helping others understand those changes. 
+                        Client Success Consultant seemed like a good place to rest and find myself while I looked for a career path 
+                        better suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another 
+                        degree? As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed reading 
+                        up on the latest policy changes at work, and helping others understand those changes.
                     </p>
                 </div>
             </section>
@@ -57,19 +55,18 @@
                         Umm, wasn't HR supposed to be a <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at <span>Pinterest</span> requires a few things. Coffee being my top 
-                        priority (thanks <span>PinCafe!</span>)... followed by perfectly crafted emails, 
-                        smooth onboarding for new employees and a few friendly calls with my fellow 
-                        <span>Pinployees!</span> As busy as the day gets, I make sure to carve time out and 
-                        check-in with my co-workers. With Pinflex, most of us work from home and venture into the office here 
-                        and there. This only makes it more important to check-in with each other, our mental health is top priority!
+                        My day to day at <span>Pinterest</span> requires a few things. Coffee being my top priority (thanks 
+                        <span>PinCafe!</span>)... followed by perfectly crafted emails, smooth onboarding for new employees and a few 
+                        friendly calls with my fellow <span>Pinployees!</span> As busy as the day gets, I make sure to carve time 
+                        out and check-in with my co-workers. With Pinflex, most of us work from home and venture into the office 
+                        here and there. This only makes it more important to check-in with each other, our mental health is top priority!
                     </p>
                     <p>
                         As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am 
                         cultivating strong relationships with other <span>Pinployees</span> 
-                        so that I create a safe space for those that are current and new employees. 
-                        Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
-                        those that are seeking assistance. 
+                        so that I create a safe space for those that are current and new employees. Human resources can be a 
+                        complicated field, I strive to make it a little easier to understand and friendlier for t
+                        hose that are seeking assistance. 
                     </p>
                 </div>
             </section>
@@ -84,7 +81,7 @@
                     <p>
                         I look forward to connecting and learning about you! 
                     </p>
-                    <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
+                        <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
                     <p>
                         <span class="adorable">Umm, don't I look adorable!</span>
                     </p>                        
