--- a/about/index.html
+++ b/about/index.html
@@ -105,8 +105,7 @@
                     </p>
                     <p>
                         I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world 
-                        of human resources is my calling. Is there any greater feeling than 
-                        sending out a well worded email?
+                        of human resources is my calling. Is there any greater feeling than sending out a well worded email?
                     </p>
                 </div>
             </section>
