--- a/work/index.html
+++ b/work/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Work it girl!</title>
         <link rel="stylesheet" href="../main.css">
+        <link rel="stylesheet" href="../normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
