--- a/about/index.html
+++ b/about/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>All about Isa!</title>
-        <link rel="stylesheet" href="../main.css">
-        <link rel="stylesheet" href="../normalize.css">
+         <link rel="stylesheet" href="../css/normalize.css" />
+        <link rel="stylesheet" href="../css/main.css" />
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Lobster&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
