Updated type in html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section id="main-html">
                 <div class="full-width">
                     <p>
-                        <img src="img/isa-selfie-block.png" alt="pictures of Isaura"/>
+                        <img src="img/isa-selfie-block.png" alt="pictures of Isaura">
                     </p>
                     <h3>
                         Y'know what, ✨<i>selfies</i>✨ <br>come before everything!
