Made changes to main

--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
                     </p>
                     <p>
                         Waking up at 5am, rushing to put out merchandise, and selling til closing time was a typical weekend with my family.
-                        Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet!
+                        Monday-Friday I would apply myself at school, and on the weekends it was family time... at the swapmeet!
                         I'd help my parents sell, display merchandise, and clean up. 
                     </p>
                     <p>
@@ -45,7 +45,7 @@
                     </p>
                     <p>    
                         Waking up before the sun rises was often difficult as a kid, but now I see 
-                        the hard work and effort that my parents did for my siblings and I. Without that experience, 
+                        the hard work and effort that my parents did for my siblings and I. Without that experience 
                         I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
                     </p>
                     <p>   
